--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.9",
     "webpack": "^4.46.0"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.2"
   }
 }
