--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.9",
+    "webfontloader": "^1.6.28",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
